...
//

import SwiftUI

struct EditorView: View {
    @State private var textToTranslate = Translation.placeholderText
    @State private var translatedText = ""
    @State private var toUBCOMode = true
    @FocusState private var editorFocus:Bool
    
    init() {
        UITextView.appearance().backgroundColor = .white.withAlphaComponent(0.2)
    }
...
                    if(textToTranslate == Translation.placeholderText) {
                        textToTranslate = ""
                    }
                    editorFocus = true
                }
                .focused($editorFocus, equals: true)
                .accessibilityIdentifier("translationTextEditor")
                
                Image(systemName:"arrow.down")
                
                Text(translatedText)
                .frame(maxWidth: .infinity, alignment: .leading)
                .accessibilityIdentifier("translatedText")
...
